@@ -7,4 +7,3 @@ getdate.c
 *.la
 *.lcd
 *.lo
-trb
