@@ -38,6 +38,7 @@
 	- rollback: convert assertion to a test.
 	- rollback: create rpmrollback.c, refactoring out of rpminstall.c.
 	- multilib: _prefer_color macro to choose elf32/elf64 files (#235757).
+	- rollback: add (*rbCheck), (*rbOrder), (*rbRun) vectors.
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
